// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article standfirst with content 1`] = `
<h2
  aria-level="2"
  role="heading"
>
  This is a standfirst
</h2>
`;

exports[`2. article standfirst with no content 1`] = `null`;

exports[`3. article label uses default section colour 1`] = `
<div>
  <div>
    RANDOM LABEL
  </div>
</div>
`;

exports[`4. article label renders null if there is no text 1`] = `null`;

exports[`5. article label shows video label is isvideo is truthy 1`] = `
<div>
  <VideoLabel
    color="#1D1D1B"
    title="Random Label"
  />
</div>
`;

exports[`6. article meta uses default section colour 1`] = `
<div>
  <div>
    <ArticleBylineWithLinks
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "attributes": Object {
                  "slug": "kaya-burgess",
                },
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": "Kaya Burgess",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "author",
              },
            ],
          },
          Object {
            "byline": Array [
              Object {
                "attributes": Object {},
                "children": Array [
                  Object {
                    "attributes": Object {
                      "value": ", Religious Affairs Correspondent",
                    },
                    "children": Array [],
                    "name": "text",
                  },
                ],
                "name": "inline",
              },
            ],
          },
        ]
      }
      color="#1D1D1B"
    />
  </div>
  <div />
  <div>
    <div>
      <DatePublication
        date="2015-03-23T19:39:39.000Z"
        publication="TIMES"
      />
    </div>
  </div>
</div>
`;
